# OP_TCG_proxy_maker

./: .env.example  .gitignore  README.md  crawler.py  main.py  pyproject.toml  server.py
.claude/commands/: pr.md  review-comments.md  tox.md
.github/workflows/: ci.yml  deploy.yml
backend/: __init__.py  app.py  config.py  main.py
backend/api/: __init__.py  branches.py  cards.py  decks.py  series.py
backend/models/: __init__.py  branches.py  cards.py
backend/services/: __init__.py  card_service.py  deck_service.py  gcs_service.py
backend/utils/: __init__.py  validators.py
crawler/: __init__.py  __main__.py  main.py  optcg_crawler.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/: Admin.css  Admin.tsx  App.css  App.tsx  firebase.ts  index.css  main.tsx
frontend/src/components/: BottomNavigation.css  BottomNavigation.tsx  CardGridSkeleton.css  CardGridSkeleton.tsx  DeckImportExportModal.tsx  FilterPanel.css  FilterPanel.tsx  HamburgerMenu.css  HamburgerMenu.tsx  LoginButton.css  LoginButton.tsx  MobileHeader.css  MobileHeader.tsx  Toast.css  Toast.tsx  (+2 more)
scripts/: deploy.sh
terraform/: artifact_registry.tf  backend.tf  cloud_run.tf  cloud_storage.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_main.py
tests/backend/: test_api_branches.py  test_api_cards.py  test_api_decks.py  test_api_series.py  test_validators.py
(+38 files in other folders)
